Fix label text colour in login profile
Before labels password and username were not visible for me
because colour (dark grey) for those label was inherited from OS
which has dark theme, and background of the label was light grey.

--- a/ui/loginScreen/loginScreen.css
+++ b/ui/loginScreen/loginScreen.css
@@ -46,3 +46,7 @@ QStackedWidget QPushButton
 #createAccountButton:hover {
   background: #0c530d;
 }
+
+QLabel {
+  color: black;
+}
